updated template to match docs

--- a/libs/cli/langchain_cli/integration_template/docs/vectorstores.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/vectorstores.ipynb
@@ -95,9 +95,16 @@
    "id": "93df377e",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
-    "- TODO: Fill out with relevant init params"
+    "- TODO: Fill out with relevant init params\n",
+    "\n",
+    "\n",
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
@@ -111,7 +118,7 @@
    "source": [
     "from __module_name__.vectorstores import __ModuleName__VectorStore\n",
     "\n",
-    "vector_store = __ModuleName__VectorStore()"
+    "vector_store = __ModuleName__VectorStore(embeddings=embeddings)"
    ]
   },
   {
@@ -281,7 +288,15 @@
    "id": "901c75dc",
    "metadata": {},
    "source": [
-    "Using retriever in a simple RAG chain:"
+    "## Chain usage\n",
+    "\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
