--- a/docs/docs/integrations/toolkits/github.ipynb
+++ b/docs/docs/integrations/toolkits/github.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use within an agent"
+    "## Use within an agent\n",
+    "\n",
+    "We will need a LLM or chat model:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize the agent with a subset of tools:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tools = [tool for tool in toolkit.get_tools() if tool.name == \"Get Pull Request\"]\n",
+    "# assert len(tools) == 1\n",
+    "# tools[0].name = \"get_pull_request\"\n",
+    "\n",
+    "\n",
+    "tools = [tool for tool in toolkit.get_tools() if tool.name == \"Get Issue\"]\n",
+    "assert len(tools) == 1\n",
+    "tools[0].name = \"get_issue\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.prebuilt import create_react_agent\n",
+    "\n",
+    "agent_executor = create_react_agent(llm, tools)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And issue it a query:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is the title of issue 24888?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  get_issue (call_iSYJVaM7uchfNHOMJoVPQsOi)\n",
+      " Call ID: call_iSYJVaM7uchfNHOMJoVPQsOi\n",
+      "  Args:\n",
+      "    issue_number: 24888\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: get_issue\n",
+      "\n",
+      "{\"number\": 24888, \"title\": \"Standardize KV-Store Docs\", \"body\": \"To make our KV-store integrations as easy to use as possible we need to make sure the docs for them are thorough and standardized. There are two parts to this: updating the KV-store docstrings and updating the actual integration docs.\\r\\n\\r\\nThis needs to be done for each KV-store integration, ideally with one PR per KV-store.\\r\\n\\r\\nRelated to broader issues #21983 and #22005.\\r\\n\\r\\n## Docstrings\\r\\nEach KV-store class docstring should have the sections shown in the [Appendix](#appendix) below. The sections should have input and output code blocks when relevant.\\r\\n\\r\\nTo build a preview of the API docs for the package you're working on run (from root of repo):\\r\\n\\r\\n```shell\\r\\nmake api_docs_clean; make api_docs_quick_preview API_PKG=openai\\r\\n```\\r\\n\\r\\nwhere `API_PKG=` should be the parent directory that houses the edited package (e.g. community, openai, anthropic, huggingface, together, mistralai, groq, fireworks, etc.). This should be quite fast for all the partner packages.\\r\\n\\r\\n## Doc pages\\r\\nEach KV-store [docs page](https://python.langchain.com/v0.2/docs/integrations/stores/) should follow [this template](https://github.com/langchain-ai/langchain/blob/master/libs/cli/langchain_cli/integration_template/docs/kv_store.ipynb).\\r\\n\\r\\nHere is an example: https://python.langchain.com/v0.2/docs/integrations/stores/in_memory/\\r\\n\\r\\nYou can use the `langchain-cli` to quickly get started with a new chat model integration docs page (run from root of repo):\\r\\n\\r\\n```shell\\r\\npoetry run pip install -e libs/cli\\r\\npoetry run langchain-cli integration create-doc --name \\\"foo-bar\\\" --name-class FooBar --component-type kv_store --destination-dir ./docs/docs/integrations/stores/\\r\\n```\\r\\n\\r\\nwhere `--name` is the integration package name without the \\\"langchain-\\\" prefix and `--name-class` is the class name without the \\\"ByteStore\\\" suffix. This will create a template doc with some autopopulated fields at docs/docs/integrations/stores/foo_bar.ipynb.\\r\\n\\r\\nTo build a preview of the docs you can run (from root):\\r\\n\\r\\n```shell\\r\\nmake docs_clean\\r\\nmake docs_build\\r\\ncd docs/build/output-new\\r\\nyarn\\r\\nyarn start\\r\\n```\\r\\n\\r\\n## Appendix\\r\\nExpected sections for the KV-store class docstring.\\r\\n\\r\\n```python\\r\\n    \\\"\\\"\\\"__ModuleName__ completion KV-store integration.\\r\\n\\r\\n    # TODO: Replace with relevant packages, env vars.\\r\\n    Setup:\\r\\n        Install ``__package_name__`` and set environment variable ``__MODULE_NAME___API_KEY``.\\r\\n\\r\\n        .. code-block:: bash\\r\\n\\r\\n            pip install -U __package_name__\\r\\n            export __MODULE_NAME___API_KEY=\\\"your-api-key\\\"\\r\\n\\r\\n    # TODO: Populate with relevant params.\\r\\n    Key init args \\u2014 client params:\\r\\n        api_key: Optional[str]\\r\\n            __ModuleName__ API key. If not passed in will be read from env var __MODULE_NAME___API_KEY.\\r\\n\\r\\n    See full list of supported init args and their descriptions in the params section.\\r\\n\\r\\n    # TODO: Replace with relevant init params.\\r\\n    Instantiate:\\r\\n        .. code-block:: python\\r\\n\\r\\n            from __module_name__ import __ModuleName__ByteStore\\r\\n\\r\\n            kv_store = __ModuleName__ByteStore(\\r\\n                # api_key=\\\"...\\\",\\r\\n                # other params...\\r\\n            )\\r\\n\\r\\n    Set keys:\\r\\n        .. code-block:: python\\r\\n\\r\\n            kv_pairs = [\\r\\n                [\\\"key1\\\", \\\"value1\\\"],\\r\\n                [\\\"key2\\\", \\\"value2\\\"],\\r\\n            ]\\r\\n\\r\\n            kv_store.mset(kv_pairs)\\r\\n\\r\\n        .. code-block:: python\\r\\n\\r\\n    Get keys:\\r\\n        .. code-block:: python\\r\\n\\r\\n            kv_store.mget([\\\"key1\\\", \\\"key2\\\"])\\r\\n\\r\\n        .. code-block:: python\\r\\n\\r\\n            # TODO: Example output.\\r\\n\\r\\n    Delete keys:\\r\\n        ..code-block:: python\\r\\n\\r\\n            kv_store.mdelete([\\\"key1\\\", \\\"key2\\\"])\\r\\n\\r\\n        ..code-block:: python\\r\\n    \\\"\\\"\\\"  # noqa: E501\\r\\n```\", \"comments\": \"[]\", \"opened_by\": \"jacoblee93\"}\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "The title of issue 24888 is \"Standardize KV-Store Docs\".\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_query = \"What is the title of issue 24888?\"\n",
+    "\n",
+    "events = agent_executor.stream(\n",
+    "    {\"messages\": [(\"user\", example_query)]},\n",
+    "    stream_mode=\"values\",\n",
+    ")\n",
+    "for event in events:\n",
+    "    event[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More examples:"
    ]
   },
   {
