--- a/docs/docs/integrations/toolkits/github.ipynb
+++ b/docs/docs/integrations/toolkits/github.ipynb
@@ -247,27 +247,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tools = [tool for tool in toolkit.get_tools() if tool.name == \"Get Pull Request\"]\n",
-    "# assert len(tools) == 1\n",
-    "# tools[0].name = \"get_pull_request\"\n",
-    "\n",
-    "\n",
-    "tools = [tool for tool in toolkit.get_tools() if tool.name == \"Get Issue\"]\n",
-    "assert len(tools) == 1\n",
-    "tools[0].name = \"get_issue\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
+    "\n",
+    "tools = [tool for tool in toolkit.get_tools() if tool.name == \"Get Issue\"]\n",
+    "assert len(tools) == 1\n",
+    "tools[0].name = \"get_issue\"\n",
     "\n",
     "agent_executor = create_react_agent(llm, tools)"
    ]
