cookbook: Multi-modal RAG for Medical Domain with VDMS

--- a/cookbook/multi_modal_RAG_medical_vdms.ipynb
+++ b/cookbook/multi_modal_RAG_medical_vdms.ipynb
@@ -60,18 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f2d42c6f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c0aef9298645791e7cbedfb0355ac149698f3210491be5200a5bb5e6ed4bd46b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! docker run --rm -d -p 55559:55555 --name vdms_rag_nb intellabs/vdms:latest\n",
     "\n",
@@ -106,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "297c3eb1",
    "metadata": {},
    "outputs": [],
@@ -118,10 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "31b165d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_rag: (563, 5)\n",
+      "df_test: (1, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "import zipfile\n",
     "import wget\n",
@@ -294,7 +295,10 @@
     "    \n",
     "    return df_rag, df_test\n",
     "\n",
-    "df_rag, df_test = create_brca_data(downloaded_zip_file, test_subjects = [\"119L\"])\n"
+    "df_rag, df_test = create_brca_data(downloaded_zip_file, test_subjects = [\"119L\"])\n",
+    "\n",
+    "print(\"df_rag:\", df_rag.shape)\n",
+    "print(\"df_test:\", df_test.shape)"
    ]
   },
   {
@@ -378,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "4b3afa7d",
    "metadata": {},
    "outputs": [],
@@ -393,33 +397,6 @@
     "\n",
     "    # Display the image by rendering the HTML\n",
     "    display(HTML(image_html))\n",
-    "    \n",
-    "\n",
-    "def resize_base64_image(base64_string, size=(256, 256)):\n",
-    "    \"\"\"\n",
-    "    Resize an image encoded as a Base64 string.\n",
-    "\n",
-    "    Args:\n",
-    "    base64_string (str): Base64 string of the original image.\n",
-    "    size (tuple): Desired size of the image as (width, height).\n",
-    "\n",
-    "    Returns:\n",
-    "    str: Base64 string of the resized image.\n",
-    "    \"\"\"\n",
-    "    # Decode the Base64 string\n",
-    "    img_data = base64.b64decode(base64_string)\n",
-    "    img = Image.open(BytesIO(img_data))\n",
-    "\n",
-    "    # Resize the image\n",
-    "    resized_img = img.resize(size, Image.LANCZOS)\n",
-    "\n",
-    "    # Save the resized image to a bytes buffer\n",
-    "    buffered = BytesIO()\n",
-    "    resized_img.save(buffered, format=img.format)\n",
-    "\n",
-    "    # Encode the resized image to Base64\n",
-    "    return base64.b64encode(buffered.getvalue()).decode(\"utf-8\")\n",
-    "\n",
     "\n",
     "def is_base64(s):\n",
     "    \"\"\"Check if a string is Base64 encoded\"\"\"\n",
@@ -474,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6a4b6702",
    "metadata": {},
    "outputs": [],
@@ -569,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "2f2432ed",
    "metadata": {},
    "outputs": [],
@@ -578,6 +555,10 @@
     "    indx = df_brca[df_brca['Patient_ID'] == p_id].index.to_list()[0]\n",
     "    print(\"Annotation of Radiologist: \", df_brca.symptoms[indx])    \n",
     "    for image_path in df_brca.images[indx]:\n",
+    "        \n",
+    "        print(image_path)\n",
+    "        print(os.path.split(image_path)[1] )\n",
+    "        \n",
     "        img = Image.open(image_path)\n",
     "        display(img)        \n",
     "    return df_brca.images[indx]\n",
@@ -604,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "15d84e9b",
    "metadata": {},
    "outputs": [
@@ -612,7 +593,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Annotation of Radiologist:  Upper outer retroareolar multiple irregular high density masses with indistinct margin and edema pattern are noted. No suspicious microcalcifications. Upper outer retroareolar multiple irregular heterogenously enhancing masses (BIRADS 5). Upper outer retroareolar suspicious looking asymmetry and edema pattern (BIRADS 4).\n"
+      "Annotation of Radiologist:  Upper outer retroareolar multiple irregular high density masses with indistinct margin and edema pattern are noted. No suspicious microcalcifications. Upper outer retroareolar multiple irregular heterogenously enhancing masses (BIRADS 5). Upper outer retroareolar suspicious looking asymmetry and edema pattern (BIRADS 4).\n",
+      "/data/datad/mcetin/langchain/cookbook/resized_subtracted_images_of_CDD_CESM/P119_L_CM_CC.jpg\n",
+      "P119_L_CM_CC.jpg\n"
      ]
     },
     {
@@ -625,6 +608,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/datad/mcetin/langchain/cookbook/resized_subtracted_images_of_CDD_CESM/P119_L_CM_MLO.jpg\n",
+      "P119_L_CM_MLO.jpg\n"
+     ]
     },
     {
      "data": {
@@ -645,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "eaaff9bd",
    "metadata": {},
    "outputs": [
@@ -687,7 +678,11 @@
     }
    ],
    "source": [
-    "vectorstore_retriever(img_paths[0], retriever) "
+    "# We will use bilateral craniocaudal (CC) image (P119_L_CM_CC.jpg) for the evaluation\n",
+    "img_path = img_paths[0]\n",
+    "\n",
+    "# test retrieval for finding similar images\n",
+    "vectorstore_retriever(img_path, retriever) "
    ]
   },
   {
@@ -701,82 +696,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "5d0196be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       " The image you provided appears to be a mammogram of a breast, which is commonly used in medical imaging to detect abnormalities such as tumors. In this particular image, we can observe several visual elements that are noteworthy:\n",
+       " The image provided appears to be a medical image of the breast area, possibly an X-ray or mammogram. However, as an AI language model, I am not able to view or analyze images directly.\n",
        "\n",
-       "* There are multiple areas of increased density and heterogeneity within the breast tissue, suggesting the presence of masses or other abnormalities.\n",
-       "* The nipple is seen retracting in some areas, which may be indicative of the presence of a malignant mass that is pulling on the skin.\n",
-       "* There are no suspicious microcalcifications visible in this image.\n",
+       "From your description, it seems that the image shows several irregular masses in both the upper and lower inner areas of the breast. These masses are associated with speculated margins, which means they do not have a clearly defined boundary between the surrounding tissue. Additionally, there may be nipple retraction and edema patterns visible in the image.\n",
        "\n",
-       "Based on these observations, it is important to consider further evaluation or treatment as necessary for provided images. The context provided by medical expert's notes for similar images suggests that these masses may be associated with edema pattern and could be classified as BIRADS 5 or 4, depending on the specific characteristics of the image. It is also worth noting that there are multiple areas of increased density within the breast tissue, which may require further evaluation to determine if they pose a risk for cancer.\n",
+       "Based on the context provided by you, it appears that the medical expert's notes suggest that these masses are potentially malignant or pre-cancerous in nature. The BIRADS score of 5 indicates a high likelihood of malignancy, while the BIRADS score of 4 suggests that further evaluation or treatment may be necessary.\n",
        "\n",
-       "Overall, this image suggests the presence of abnormalities within the breast tissue that may require additional imaging or biopsy for diagnosis and treatment planning. "
+       "As an assistant, I would recommend seeking medical advice from a qualified healthcare professional who can provide a proper diagnosis and recommend appropriate treatment options. It's important to follow the recommendations of medical experts for similar images, as they are trained in interpreting such images and providing appropriate care. "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prompt = \"what is this image about?\"\n",
-    "query = {\"prompt\": prompt, \"image\": img_paths[0]}\n",
-    "\n",
-    "chain = multi_modal_rag_chain(retriever)\n",
-    "response = chain.invoke(query)\n",
-    "HTML(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "114a4d8d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       " The image provided is a mammogram, which is an X-ray image of the breast tissue. It appears to be a lateral-lateral view, as indicated by the labels on the image.\n",
-       "\n",
-       "In this particular image, there are several visual elements that stand out:\n",
-       "\n",
-       "* Multiple retroareolar and lower inner irregular high density masses: These are dense areas of tissue in the lower inner portion of the breast that appear to be irregularly shaped. They have a speculated margin, which means their boundary is not clearly defined. Additionally, there is nipple retraction associated with these masses, which means the nipple is retracted towards the mass.\n",
-       "* Multiple retroareolar and lower inner malignant looking masses: These are also dense areas of tissue in the lower inner portion of the breast, but they have a more suspicious appearance. They are associated with nipple retraction and an edema pattern, which is swelling caused by increased blood flow to an area.\n",
-       "* Lower central quadrant asymmetrical increased density: This refers to an area of increased density in the lower central portion of the breast that appears asymmetrical compared to the surrounding tissue. There is also a rounded mass with indistinct margin present in this region.\n",
-       "* Central outer clusters of microcalcifications: These are small, hard deposits of calcium in the breast tissue. They are often associated with an increased risk of cancer.\n",
-       "* Normal skin thickness and contour of breast: The skin overlying the breast appears to be of normal thickness and shape.\n",
-       "* Lower central irregular heterogeneously enhancing mass: This is a dense area of tissue that is irregularly shaped and has heterogeneous enhancement, which means it appears denser in some areas than others on the mammogram.\n",
-       "* Diffuse edematous changes: These are changes in the breast tissue that appear diffuse (spread throughout the area) and are associated with swelling caused by increased blood flow to an area.\n",
-       "* Multiple retroareolar inner irregular heterogeneously enhancing masses: This is a dense area of tissue in the lower inner portion of the breast that appears irregularly shaped, has heterogeneous enhancement, and is located near the nipple.\n",
-       "* Lower central asymmetry and suspicious looking mass associated with central outer suspicious microcalcifications: This refers to an area of increased density in the lower central portion of the breast that appears asymmetrical compared to the surrounding tissue and has a mass associated with it that looks suspicious, along with suspicious microcalcifications present nearby.\n",
-       "* Diffuse edematous changes: This is swelling caused by increased blood flow to an area that appears diffuse throughout the image.\n",
-       "\n",
-       "Based on the medical expert's notes provided for similar images, this mammogram has several features that are associated with a higher risk of cancer. These include irregularly shaped masses in the lower inner portion of the breast with speculated margin and nipple retraction, multiple retroareolar inner malignant looking masses with nipple retraction and an edema pattern, and a lower central asymmetrical increased density mass with indistinct margin.\n",
-       "\n",
-       "In summary, this mammogram image shows several areas of increased density in the breast tissue that appear irregularly shaped and have heterogeneous enhancement. There are also some features that are associated with a higher risk of cancer, such as nipple retraction, an edema pattern, and suspicious microcalcifications. Further evaluation or treatment recommendations would need to be made by a qualified medical professional based on the full context of the patient's history and other diagnostic tests. "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# More detailed analysis can be achieved by providing a more comprehensive prompt\n",
-    "prompt = \"Can you analyse, interpret, and clearly explain the visual elements of the provided mammogram image as an expert radiologist?\"\n",
-    "query = {\"prompt\": prompt, \"image\": img_paths[0]}\n",
+    "query = {\"prompt\": prompt, \"image\": img_path}\n",
     "\n",
     "chain = multi_modal_rag_chain(retriever)\n",
     "response = chain.invoke(query)\n",
@@ -786,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71bf08f2",
+   "id": "114a4d8d",
    "metadata": {},
    "outputs": [],
    "source": []
