add example to slack guide

--- a/docs/docs/integrations/toolkits/slack.ipynb
+++ b/docs/docs/integrations/toolkits/slack.ipynb
@@ -123,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "[SlackGetChannel(client=<slack_sdk.web.client.WebClient object at 0x10ce3a4d0>),\n",
-       " SlackGetMessage(client=<slack_sdk.web.client.WebClient object at 0x10ce3a0e0>),\n",
-       " SlackScheduleMessage(client=<slack_sdk.web.client.WebClient object at 0x10ce3a050>),\n",
-       " SlackSendMessage(client=<slack_sdk.web.client.WebClient object at 0x10ce3a020>)]"
+       "[SlackGetChannel(client=<slack_sdk.web.client.WebClient object at 0x113caa8c0>),\n",
+       " SlackGetMessage(client=<slack_sdk.web.client.WebClient object at 0x113caa4d0>),\n",
+       " SlackScheduleMessage(client=<slack_sdk.web.client.WebClient object at 0x113caa440>),\n",
+       " SlackSendMessage(client=<slack_sdk.web.client.WebClient object at 0x113caa410>)]"
       ]
      },
      "execution_count": 3,
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,17 +189,55 @@
       "When was the #general channel created?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  get_channelid_name_dict (call_mINmB55OWDIkXykGXZXaL5Ar)\n",
-      " Call ID: call_mINmB55OWDIkXykGXZXaL5Ar\n",
+      "  get_channelid_name_dict (call_NXDkALjoOx97uF1v0CoZTqtJ)\n",
+      " Call ID: call_NXDkALjoOx97uF1v0CoZTqtJ\n",
       "  Args:\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The #general channel was created on Unix timestamp 1671043305, which corresponds to \"Mon, 12 Dec 2022 18:41:45 GMT\" in human-readable format.\n"
+      "The #general channel was created on timestamp 1671043305.\n"
      ]
     }
    ],
    "source": [
     "example_query = \"When was the #general channel created?\"\n",
+    "\n",
+    "events = agent_executor.stream(\n",
+    "    {\"messages\": [(\"user\", example_query)]},\n",
+    "    stream_mode=\"values\",\n",
+    ")\n",
+    "for event in events:\n",
+    "    message = event[\"messages\"][-1]\n",
+    "    if message.type != \"tool\":  # mask sensitive information\n",
+    "        event[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Send a friendly greeting to channel C072Q1LP4QM.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  send_message (call_xQxpv4wFeAZNZgSBJRIuaizi)\n",
+      " Call ID: call_xQxpv4wFeAZNZgSBJRIuaizi\n",
+      "  Args:\n",
+      "    message: Hello! Have a great day!\n",
+      "    channel: C072Q1LP4QM\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I have sent a friendly greeting to the channel C072Q1LP4QM.\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_query = \"Send a friendly greeting to channel C072Q1LP4QM.\"\n",
     "\n",
     "events = agent_executor.stream(\n",
     "    {\"messages\": [(\"user\", example_query)]},\n",
