--- a/docs/docs/integrations/toolkits/gmail.ipynb
+++ b/docs/docs/integrations/toolkits/gmail.ipynb
@@ -247,11 +247,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## API reference\n",
+    "\n",
+    "For detailed documentation of all `GmailToolkit` features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/agent_toolkits/langchain_community.agent_toolkits.slack.toolkit.SlackToolkit.html)."
+   ]
   }
  ],
  "metadata": {
