--- a/docs/docs/integrations/llms/openai.ipynb
+++ b/docs/docs/integrations/llms/openai.ipynb
@@ -182,9 +182,7 @@
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "\n",
-    "prompt = PromptTemplate(\n",
-    "    \"How to say {input} in {output_language}:\\n\"\n",
-    ")\n",
+    "prompt = PromptTemplate(\"How to say {input} in {output_language}:\\n\")\n",
     "\n",
     "chain = prompt | llm\n",
     "chain.invoke(\n",
@@ -216,7 +214,10 @@
     "\n",
     "import httpx\n",
     "\n",
-    "openai = OpenAI(model_name=\"gpt-3.5-turbo-instruct\", http_client=httpx.Client(proxies=\"http://proxy.yourcompany.com:8080\"))"
+    "openai = OpenAI(\n",
+    "    model_name=\"gpt-3.5-turbo-instruct\",\n",
+    "    http_client=httpx.Client(proxies=\"http://proxy.yourcompany.com:8080\"),\n",
+    ")"
    ]
   },
   {
