--- a/docs/docs/integrations/tools/financial_datasets.ipynb
+++ b/docs/docs/integrations/tools/financial_datasets.ipynb
@@ -71,7 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_wrapper = FinancialDatasetsAPIWrapper(financial_datasets_api_key=os.environ[\"FINANCIAL_DATASETS_API_KEY\"])\n",
+    "api_wrapper = FinancialDatasetsAPIWrapper(\n",
+    "    financial_datasets_api_key=os.environ[\"FINANCIAL_DATASETS_API_KEY\"]\n",
+    ")\n",
     "toolkit = FinancialDatasetsToolkit(api_wrapper=api_wrapper)"
    ]
   },
