fix lint issues

--- a/docs/docs/integrations/tools/financial_datasets.ipynb
+++ b/docs/docs/integrations/tools/financial_datasets.ipynb
@@ -23,19 +23,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n",
-    "import os\n",
+    "# Standard library imports\n",
     "import getpass\n",
+    "import os\n",
     "\n",
+    "# Third-party imports\n",
     "from langchain.agents import AgentExecutor, create_openai_tools_agent\n",
-    "from langchain_community.tools.financial_datasets.balance_sheets import BalanceSheets\n",
-    "from langchain_community.tools.financial_datasets.cash_flow_statements import CashFlowStatements\n",
-    "from langchain_community.tools.financial_datasets.income_statements import IncomeStatements\n",
-    "\n",
     "from langchain_community.agent_toolkits.financial_datasets.toolkit import (\n",
     "    FinancialDatasetsToolkit,\n",
     ")\n",
-    "\n",
+    "from langchain_community.tools.financial_datasets.balance_sheets import BalanceSheets\n",
+    "from langchain_community.tools.financial_datasets.cash_flow_statements import (\n",
+    "    CashFlowStatements,\n",
+    ")\n",
+    "from langchain_community.tools.financial_datasets.income_statements import (\n",
+    "    IncomeStatements,\n",
+    ")\n",
     "from langchain_community.utilities.financial_datasets import FinancialDatasetsAPIWrapper\n",
     "from langchain_openai import ChatOpenAI"
    ]
