--- a/docs/docs/integrations/tools/financial_datasets.ipynb
+++ b/docs/docs/integrations/tools/financial_datasets.ipynb
@@ -9,11 +9,9 @@
    "source": [
     "# Stock market API tools using financialdatasets.ai\n",
     "\n",
-    "The [financial datasets](https://financialdatasets.ai/) stock market API provides REST endpoints that let you get financial data for 16,000+ tickers spanning 30+ years.\n",
-    "\n",
-    "This notebook creates an Agent, which has tools for getting financial data from income statements, balance sheets, and cash flow statements for a ticker.\n",
-    "\n",
-    "You can ask the Agent any financial question and the agent will pull fundamental data from financial datasets to answer your question."
+    "> The [financial datasets](https://financialdatasets.ai/) stock market API provides REST endpoints that let you get financial data for 16,000+ tickers spanning 30+ years.\n",
+    "> This notebook creates an Agent, which has tools for getting financial data from income statements, balance sheets, and cash flow statements for a ticker.\n",
+    "> You can ask the Agent any financial question and the agent will pull fundamental data from financial datasets to answer your question."
    ]
   },
   {
