add llm and multi prompt router chains

--- a/docs/docs/versions/migrating_chains/index.mdx
+++ b/docs/docs/versions/migrating_chains/index.mdx
@@ -30,5 +30,7 @@ The below pages assist with migration from various specific chains to LCEL:
 - [ConversationChain](/docs/versions/migrating_chains/conversation_chain)
 - [RetrievalQA](/docs/versions/migrating_chains/retrieval_qa)
 - [ConversationalRetrievalChain](/docs/versions/migrating_chains/conversation_retrieval_chain)
+- [LLMRouterChain](/docs/versions/migrating_chains/llm_router_chain)
+- [MultiPromptChain](/docs/versions/migrating_chains/multi_prompt_chain)
 
 Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information.
