--- a/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
@@ -73,7 +73,6 @@
    "outputs": [],
    "source": [
     "from langchain.chains.router.multi_prompt import MultiPromptChain\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
@@ -115,8 +114,8 @@
     {
      "data": {
       "text/plain": [
-       "{'input': 'What color are carrots?',\n",
-       " 'text': 'Carrots are typically orange in color, but they can also be found in other colors such as purple, red, yellow, and white.'}"
+       "{'input': 'What colors are carrots?',\n",
+       " 'text': 'Carrots come in various colors such as orange, red, yellow, purple, and white. The most common color of carrots is orange, but there are also heirloom varieties that come in different colors.'}"
       ]
      },
      "execution_count": 2,
@@ -227,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "'Carrots come in a variety of colors, including orange, purple, red, white, and yellow. The most common color of carrots is orange, but you can find different colored varieties at specialty markets or through heirloom seed suppliers.'"
+       "'Carrots are typically orange in color, but they can also be found in other colors such as purple, red, yellow, and white, depending on the variety.'"
       ]
      },
      "execution_count": 4,
@@ -256,7 +255,7 @@
    "source": [
     "## Overview:\n",
     "\n",
-    "- Under the hood, `MultiPromptChain` routes the query byinstructing the LLM to generate JSON-formatted text, and parses out the intended destination. It takes a registry of string prompt templates as input.\n",
+    "- Under the hood, `MultiPromptChain` routes the query by instructing the LLM to generate JSON-formatted text, and parses out the intended destination. It takes a registry of string prompt templates as input.\n",
     "- The LCEL implementation, implemented above via lower-level primitives, uses tool-calling to route to arbitrary chains. In this example, the chains include chat model templates and chat models."
    ]
   },
