clean up guides

--- a/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/llm_router_chain.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "364814a5-d15c-41bb-bf3f-581df51a4721",
    "metadata": {},
    "outputs": [
@@ -36,12 +36,12 @@
       "\n",
       "<< FORMATTING >>\n",
       "Return a markdown code snippet with a JSON object formatted to look like:\n",
-      "```json\n",
+      "'''json\n",
       "{{\n",
       "    \"destination\": string \\ name of the prompt to use or \"DEFAULT\"\n",
       "    \"next_inputs\": string \\ a potentially modified version of the original input\n",
       "}}\n",
-      "```\n",
+      "'''\n",
       "\n",
       "REMEMBER: \"destination\" MUST be one of the candidate prompt names specified below OR it can be \"DEFAULT\" if the input is not well suited for any of the candidate prompts.\n",
       "REMEMBER: \"next_inputs\" can just be the original input if you don't think any modifications are needed.\n",
@@ -55,8 +55,8 @@
       "<< INPUT >>\n",
       "{input}\n",
       "\n",
-      "<< OUTPUT (must include ```json at the start of the response) >>\n",
-      "<< OUTPUT (must end with ```) >>\n",
+      "<< OUTPUT (must include '''json at the start of the response) >>\n",
+      "<< OUTPUT (must end with ''') >>\n",
       "\n"
      ]
     }
@@ -71,7 +71,7 @@
     "\n",
     "router_template = MULTI_PROMPT_ROUTER_TEMPLATE.format(destinations=destinations)\n",
     "\n",
-    "print(router_template)"
+    "print(router_template.replace(\"`\", \"'\"))  # for rendering purposes"
    ]
   },
   {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "c58c9269-5a1d-4234-88b5-7168944618bf",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "a22ebdca-5f53-459e-9cff-a97b2354ffe0",
    "metadata": {},
    "outputs": [
@@ -160,10 +160,10 @@
       "text/plain": [
        "{'input': 'What color are carrots?',\n",
        " 'destination': 'vegetables',\n",
-       " 'next_inputs': {'input': 'What colors are carrots?'}}"
+       " 'next_inputs': {'input': 'What color are carrots?'}}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "5bbebac2-df19-4f59-8a69-f61cd7286e59",
    "metadata": {},
    "outputs": [],
@@ -218,17 +218,28 @@
     "    destination: Literal[\"animal\", \"vegetable\"]\n",
     "\n",
     "\n",
+    "# Instead of writing formatting instructions into the prompt, we\n",
+    "# leverage .with_structured_output to coerce the output into a simple\n",
+    "# schema.\n",
+    "route_chain = (\n",
+    "    route_prompt  # pass query into above prompt template\n",
+    "    | llm.with_structured_output(RouteQuery)  # generate output matching a schema\n",
+    "    | itemgetter(\"destination\")  # pluck out the \"destination\" parameter of the schema\n",
+    ")\n",
+    "\n",
+    "# Finally, our chain just collects the input\n",
+    "# alongside the output of our route_chain.\n",
+    "# Below, we pass a dict input; RunnablePassthrough.assign\n",
+    "# then adds the destination and next_step keys to this dict.\n",
     "chain = RunnablePassthrough().assign(\n",
-    "    destination=route_prompt\n",
-    "    | llm.with_structured_output(RouteQuery)\n",
-    "    | itemgetter(\"destination\"),\n",
+    "    destination=route_chain,\n",
     "    next_inputs=RunnablePassthrough(),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "88012e10-8def-44fa-833f-989935824182",
    "metadata": {},
    "outputs": [
@@ -240,7 +251,7 @@
        " 'next_inputs': {'input': 'What color are carrots?'}}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,19 +262,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b50ebf0-76f6-4db2-bd95-e9d516fe6c6a",
+   "id": "baf7ba9e-65b4-48af-8a39-453c01a7b7cb",
    "metadata": {},
    "source": [
     "\n",
     "</Column>\n",
-    "</ColumnContainer>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "baf7ba9e-65b4-48af-8a39-453c01a7b7cb",
-   "metadata": {},
-   "source": [
+    "</ColumnContainer>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "See [this tutorial](/docs/tutorials/llm_chain) for more detail on building with prompt templates, LLMs, and output parsers.\n",
