--- a/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
@@ -240,19 +240,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bedaec8-936b-4bd8-aeba-0b75d81c0d0e",
+   "id": "e7e46205-9d80-45b8-a3d5-cfbc8ebbe19a",
    "metadata": {},
    "source": [
     "\n",
     "</Column>\n",
-    "</ColumnContainer>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7e46205-9d80-45b8-a3d5-cfbc8ebbe19a",
-   "metadata": {},
-   "source": [
+    "</ColumnContainer>\n",
+    "\n",
     "## Overview:\n",
     "\n",
     "- Under the hood, `MultiPromptChain` routes the query by instructing the LLM to generate JSON-formatted text, and parses out the intended destination. It takes a registry of string prompt templates as input.\n",
