--- a/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
@@ -238,7 +238,7 @@
     "        # pass along remaining documents\n",
     "        \"documents\": RunnableLambda(lambda docs: docs[1:]),\n",
     "    }\n",
-    "    # create and run a\n",
+    "    # create and run a sequence of summaries on remaining docs\n",
     "    | RunnableLambda(_refine_remaining_docs)\n",
     ")"
    ]
