--- a/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/map_reduce_chain.ipynb
@@ -15,16 +15,51 @@
    "id": "2c7bdc91-9b89-4e59-bc27-89508b024635",
    "metadata": {},
    "source": [
-    "Langgraph advantage: streaming steps allows for more control\n",
+    "[MapReduceDocumentsChain](https://api.python.langchain.com/en/latest/chains/langchain.chains.combine_documents.map_reduce.MapReduceDocumentsChain.html) implements a map-reduce strategy for summarizing (potentially long) texts. The strategy is as follows:\n",
     "\n",
-    "TODO:\n",
-    "- nodes as runnables instead of separate sync/async implementations\n",
-    "- store documents in state (?) to avoid translation back-and-forth"
+    "- Split a text into smaller documents;\n",
+    "- Generate a summary of each document;\n",
+    "- Summarize the summaries in a final step.\n",
+    "\n",
+    "Note that the intermediate summarization step is typically parallelized over the input documents.\n",
+    "\n",
+    "In the final step (the \"reduce\"), `MapReduceDocumentsChain` supports a recursive \"collapsing\" of the summaries: the inputs would be partitioned based on a token limit, and summaries would be generated of the partitions. This step would be repeated until the total length of the summaries was within a desired limit, allowing for the summarization of arbitrary-length text. This is particularly useful for models with smaller context windows.\n",
+    "\n",
+    "LangGraph suports [map-reduce](https://langchain-ai.github.io/langgraph/how-tos/map-reduce/) workflows, and confers a number of advantages for this problem:\n",
+    "\n",
+    "- LangGraph allows for individual steps (such as successive summarizations) to be streamed, allowing for greater control of execution;\n",
+    "- LangGraph's [checkpointing](https://langchain-ai.github.io/langgraph/how-tos/persistence/) supports error recovery, extending with human-in-the-loop workflows, and easier incorporation into conversational applications.\n",
+    "- The LangGraph implementation is easier to extend, as we will see below.\n",
+    "\n",
+    "Below we will go through both `MapReduceDocumentsChain` and a corresponding LangGraph implementation, first on a simple example for illustrative purposes, and second on a longer example text to demonstrate the recursive reduce step.\n",
+    "\n",
+    "Let's first load a chat model:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0bdf886b-aeeb-407e-81b8-28bad59ad57a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "412e7ae5-6d4d-4a7e-8095-f6943e103fb6",
    "metadata": {},
    "outputs": [],
@@ -35,16 +70,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c17486ed-2879-450b-b969-61ea359b8175",
+   "cell_type": "markdown",
+   "id": "41cfb569-f7e6-48cb-a90e-45a482009971",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Basic example (short documents)\n",
+    "\n",
+    "Let's generate some simple documents for illustrative purposes."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "b221a71f-982b-4c08-8597-96c890e00965",
    "metadata": {},
    "outputs": [],
@@ -59,12 +96,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a825a868-aa16-441e-8413-c64a7b3a20bf",
+   "cell_type": "markdown",
+   "id": "c717514a-1b6d-4a0f-9093-ef594b9a0b17",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Legacy\n",
+    "\n",
+    "Below we show an implementation with `MapReduceDocumentsChain`. We define the prompt templates for the map and reduce steps, instantiate separate chains for these steps, and finally instantiate the `MapReduceDocumentsChain`:"
+   ]
   },
   {
    "cell_type": "code",
@@ -163,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "2c710a66-2d3d-44be-b9e7-9dfee8c22a50",
    "metadata": {},
    "outputs": [],
@@ -173,7 +212,6 @@
     "\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.runnables import RunnableLambda\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langgraph.constants import Send\n",
     "from langgraph.graph import END, StateGraph, START\n",
@@ -216,14 +254,17 @@
     "\n",
     "# Here we generate a summary, given a document\n",
     "def generate_summary(state: SummaryState):\n",
-    "    chain = map_prompt | llm | StrOutputParser()\n",
-    "    response = chain.invoke(state[\"content\"])\n",
-    "    return {\"summaries\": [response]}\n",
     "\n",
-    "async def agenerate_summary(state: SummaryState):\n",
-    "    chain = map_prompt | llm | StrOutputParser()\n",
-    "    response = await chain.ainvoke(state[\"content\"])\n",
-    "    return {\"summaries\": [response]}\n",
+    "    def _format_output(response: str) -> dict:\n",
+    "        return {\"summaries\": [response]}\n",
+    "\n",
+    "    return (\n",
+    "        operator.itemgetter(\"content\")\n",
+    "        | map_prompt\n",
+    "        | llm\n",
+    "        | StrOutputParser()\n",
+    "        | _format_output\n",
+    "    )\n",
     "\n",
     "\n",
     "# Here we define the logic to map out over the documents\n",
@@ -239,28 +280,24 @@
     "\n",
     "\n",
     "# Here we will generate the final summary\n",
-    "# TODO: get rid of separate sync/async implementations\n",
     "def generate_final_summary(state: OverallState):\n",
-    "    chain = reduce_prompt | llm | StrOutputParser()\n",
-    "    response = chain.invoke(state[\"summaries\"])\n",
-    "    return {\"final_summary\": response}\n",
     "\n",
-    "async def agenerate_final_summary(state: OverallState):\n",
-    "    chain = reduce_prompt | llm | StrOutputParser()\n",
-    "    response = await chain.ainvoke(state[\"summaries\"])\n",
-    "    return {\"final_summary\": response}\n",
+    "    def _format_output(response: str) -> dict:\n",
+    "        return {\"final_summary\": response}\n",
+    "\n",
+    "    return (\n",
+    "        operator.itemgetter(\"summaries\")\n",
+    "        | reduce_prompt\n",
+    "        | llm\n",
+    "        | StrOutputParser()\n",
+    "        | _format_output\n",
+    "    )\n",
     "\n",
     "\n",
     "# Construct the graph: here we put everything together to construct our graph\n",
     "graph = StateGraph(OverallState)\n",
-    "graph.add_node(\n",
-    "    \"generate_summary\",\n",
-    "    RunnableLambda(generate_summary, agenerate_summary),\n",
-    ")\n",
-    "graph.add_node(\n",
-    "    \"generate_final_summary\",\n",
-    "    RunnableLambda(generate_final_summary, agenerate_final_summary),\n",
-    ")\n",
+    "graph.add_node(\"generate_summary\", generate_summary)\n",
+    "graph.add_node(\"generate_final_summary\", generate_final_summary)\n",
     "graph.add_conditional_edges(START, map_summaries, [\"generate_summary\"])\n",
     "graph.add_edge(\"generate_summary\", \"generate_final_summary\")\n",
     "graph.add_edge(\"generate_final_summary\", END)\n",
@@ -269,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "934cf1a5-ce6d-48ac-8151-942d14586052",
    "metadata": {},
    "outputs": [
@@ -280,7 +317,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "e4b999d5-07f5-45c6-8cb0-c77440790cd3",
    "metadata": {},
    "outputs": [
@@ -310,7 +347,7 @@
    ],
    "source": [
     "# Call the graph:\n",
-    "for step in app.stream({\"contents\": [doc.page_content for doc in documents]}):\n",
+    "async for step in app.astream({\"contents\": [doc.page_content for doc in documents]}):\n",
     "    print(step)"
    ]
   },
@@ -340,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "dfbb6ce8-9183-41d4-b022-924ee01669e0",
    "metadata": {},
    "outputs": [
@@ -348,6 +385,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
       "Created a chunk of size 1003, which is longer than the specified 1000\n"
      ]
     }
@@ -395,15 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81de87e2-2319-4750-b05c-9f2d00194db5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "a1cb9fcf-3a27-45e0-84bc-83c66aa65421",
    "metadata": {},
    "outputs": [],
@@ -411,6 +441,7 @@
     "from typing import Literal\n",
     "\n",
     "from langchain.chains.combine_documents.reduce import collapse_docs, split_list_of_docs\n",
+    "from langchain_core.runnables.base import RunnableEach, RunnableLambda\n",
     "\n",
     "def length_function(documents: List[Document]) -> int:\n",
     "    \"\"\"Get number of tokens for input contents.\"\"\"\n",
@@ -418,62 +449,72 @@
     "\n",
     "token_max = 1000\n",
     "\n",
+    "\n",
     "class OverallState(TypedDict):\n",
     "    contents: List[str]\n",
     "    summaries: Annotated[list, operator.add]\n",
-    "    collapsed_summaries: List[str]  # add key for collapsed summaries\n",
+    "    collapsed_summaries: List[Document]  # add key for collapsed summaries\n",
     "    final_summary: str\n",
     "\n",
-    "# Same as before\n",
-    "graph = StateGraph(OverallState)\n",
-    "graph.add_node(\n",
-    "    \"generate_summary\",\n",
-    "    RunnableLambda(generate_summary, agenerate_summary),\n",
-    ")\n",
     "\n",
     "# Add node to store summaries for collapsing\n",
     "def collect_summaries(state: OverallState):\n",
-    "    return {\"collapsed_summaries\": state[\"summaries\"]}\n",
+    "    return {\n",
+    "        \"collapsed_summaries\": [Document(summary) for summary in state[\"summaries\"]]\n",
+    "    }\n",
     "\n",
-    "graph.add_node(\"collect_summaries\", collect_summaries)\n",
     "\n",
     "# Modify final summary to read off collapsed summaries\n",
     "def generate_final_summary(state: OverallState):\n",
-    "    chain = reduce_prompt | llm | StrOutputParser()\n",
-    "    response = chain.invoke(state[\"collapsed_summaries\"])\n",
-    "    return {\"final_summary\": response}\n",
     "\n",
-    "async def agenerate_final_summary(state: OverallState):\n",
-    "    chain = reduce_prompt | llm | StrOutputParser()\n",
-    "    response = await chain.ainvoke(state[\"collapsed_summaries\"])\n",
-    "    return {\"final_summary\": response}\n",
-    "graph.add_node(\n",
-    "    \"generate_final_summary\",\n",
-    "    RunnableLambda(generate_final_summary, agenerate_final_summary),\n",
-    ")\n",
+    "    def _format_output(response: str) -> dict:\n",
+    "        return {\"final_summary\": response}\n",
+    "\n",
+    "    return (\n",
+    "        operator.itemgetter(\"collapsed_summaries\")\n",
+    "        | reduce_prompt\n",
+    "        | llm\n",
+    "        | StrOutputParser()\n",
+    "        | _format_output\n",
+    "    )\n",
+    "\n",
+    "graph = StateGraph(OverallState)\n",
+    "graph.add_node(\"generate_summary\", generate_summary)  # same as before\n",
+    "graph.add_node(\"collect_summaries\", collect_summaries)\n",
+    "graph.add_node(\"generate_final_summary\", generate_final_summary)\n",
+    "\n",
     "\n",
     "# Add node to collapse summaries\n",
     "def collapse_summaries(state: OverallState):\n",
-    "    collapsed_summaries = [\n",
-    "        Document(content) for content in state[\"collapsed_summaries\"]\n",
-    "    ]\n",
-    "    doc_lists = split_list_of_docs(\n",
-    "        collapsed_summaries, length_function, token_max\n",
-    "    )\n",
+    "\n",
     "    chain = reduce_prompt | llm | StrOutputParser()\n",
-    "    result_docs = []\n",
-    "    for doc_list in doc_lists:\n",
-    "        result_docs.append(collapse_docs(doc_list, chain.invoke))\n",
-    "    return {\"collapsed_summaries\": [doc.page_content for doc in result_docs]}\n",
+    "\n",
+    "    def _split_list_of_docs(summaries: list):\n",
+    "        return split_list_of_docs(\n",
+    "            summaries, length_function, token_max\n",
+    "        )\n",
+    "\n",
+    "    _collapse_docs = RunnableLambda(\n",
+    "        lambda doc_list: collapse_docs(doc_list, chain.invoke),\n",
+    "        lambda doc_list: collapse_docs(doc_list, chain.ainvoke),\n",
+    "    )\n",
+    "\n",
+    "    def _format_output(summaries: list) -> dict:\n",
+    "        return {\"collapsed_summaries\": summaries}\n",
+    "\n",
+    "    return (\n",
+    "        operator.itemgetter(\"collapsed_summaries\")\n",
+    "        | RunnableLambda(_split_list_of_docs)\n",
+    "        | RunnableEach(bound=_collapse_docs)\n",
+    "        | _format_output\n",
+    "    )\n",
     "\n",
     "graph.add_node(\"collapse_summaries\", collapse_summaries)\n",
     "\n",
     "def should_collapse(\n",
     "    state: OverallState\n",
     ") -> Literal[\"collapse_summaries\", \"generate_final_summary\"]:\n",
-    "    num_tokens = length_function(\n",
-    "        Document(content) for content in state[\"collapsed_summaries\"]\n",
-    "    )\n",
+    "    num_tokens = length_function(state[\"collapsed_summaries\"])\n",
     "    if num_tokens > token_max:\n",
     "        return \"collapse_summaries\"\n",
     "    else:\n",
@@ -490,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "4c1704a1-d7e3-43a4-8ea8-7af765253194",
    "metadata": {},
    "outputs": [
@@ -501,7 +542,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,8 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "bd7c2de7-73c3-4db4-a727-85fe6bcfb9ee",
+   "execution_count": 30,
+   "id": "702be91d-14c1-4a73-8610-72db5e5e7cde",
    "metadata": {},
    "outputs": [
     {
@@ -536,18 +577,17 @@
       "['generate_summary']\n",
       "['generate_summary']\n",
       "['generate_summary']\n",
-      "num docs: 14\n",
-      "num tokens: 1604\n",
       "['collect_summaries']\n",
-      "num docs: 2\n",
-      "num tokens: 344\n",
       "['collapse_summaries']\n",
       "['generate_final_summary']\n"
      ]
     }
    ],
    "source": [
-    "for step in app.stream({\"contents\": [doc.page_content for doc in split_docs]}):\n",
+    "for step in app.stream(\n",
+    "    {\"contents\": [doc.page_content for doc in split_docs]},\n",
+    "    {\"recursion_limit\": 10},\n",
+    "):\n",
     "    print(list(step.keys()))"
    ]
   },
